# Scabbard

./: .gitignore  CMakeLists.txt  LICENSE  NOTICE  README.md  scabbard.cmake
cli/: CMakeLists.txt  argconfig.py  scabbard.py
doc/: LLNL-README.md  scratch.md
instr/: CMakeLists.txt
instr/src/: DepTrace_DEVICE.cpp  DepTrace_HOST.cpp  MetadataHandler.cpp  ScabbardPass.cpp  ScabbardPass.hpp  old_ScabbardPass.cpp  registry.cpp
interception/: scabbard.py
lib/: CMakeLists.txt
lib/include/scabbard/: Enums.hpp  GroupedPtr.hpp  Metadata.hpp  TraceData.hpp  instr-names.def
lib/src/: Enums.cpp  MetadataIO.cpp  TraceData.cpp
libtrace/: CMakeLists.txt
libtrace/include/scabbard/trace/: AsyncQueue.hpp  DeviceTracker.hpp  calls.hpp
libtrace/src/: AsyncQueue.cpp  defs.cpp  device-defs.cpp
rtl/: CMakeLists.txt  default_stream_helper.c  default_stream_helper.cpp
rtl/include/scabbard/rtl/: AsyncQueue.hpp  DeviceTracker.hpp  GroupedPtr.hpp  IntervalMap.hpp  ReportWriter.hpp  Runtime.hpp  StateMachine.hpp  calls.hpp  globals.hpp  osteam.hpp
rtl/src/: AsyncQueue.cpp  ReportWriter.cpp  Runtime.cpp  SafetyPass.cpp  StateMachine.cpp  TraceWriter.cpp  defs.cpp  device-defs.cpp
test/: run_all.sh  run_x.sh
test/rtl-unit/: test_IntervalMap.cpp
verif/: CMakeLists.txt
verif/src/: StateMachine.cpp
