cmake_minimum_required(VERSION 3.20)
project(cli)

find_package(Python 3.10 REQUIRED COMPONENTS Interpreter)

configure_file(${CMAKE_CURRENT_SOURCE_DIR}/scabbard.py ${SCABBARD_PATH}/scabbard.py
    FILE_PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_WRITE GROUP_EXECUTE WORLD_READ WORLD_EXECUTE  
  )
configure_file(${CMAKE_CURRENT_SOURCE_DIR}/scabbard ${SCABBARD_PATH}/scabbard COPYONLY
    FILE_PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_WRITE GROUP_EXECUTE WORLD_READ WORLD_EXECUTE  
  )
configure_file(${CMAKE_CURRENT_SOURCE_DIR}/colors.py ${SCABBARD_PATH}/colors.py COPYONLY)
configure_file(${CMAKE_CURRENT_SOURCE_DIR}/argconfig.py ${SCABBARD_PATH}/argconfig.py COPYONLY)


